--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=postgres
 spring.datasource.hikari.schema=public
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-
+server.port=8080
