--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.hikari.schema=public
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.port=8080
+
+jwt.secret=secret
+jwt.validity=5
