--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.port=8080
 
-jwt.secret=secret
+# secret mora biti 32 znaka ili vise
+jwt.secret=secretsecretsecretsecretsecretsecret 
+# vrijednost u minutama
 jwt.validity=5
 jwt.signatureAlgorithm=SignatureAlgorithm.HS256
