--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,9 @@ server.port=8080
 # secret mora biti 32 znaka ili vise
 jwt.secret=secretsecretsecretsecretsecretsecret 
 # vrijednost u minutama
-jwt.validity=5
+jwt.validity=4320
 jwt.signatureAlgorithm=SignatureAlgorithm.HS256
+
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
