--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ logging.level.org.springframework=ERROR
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/app
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://10.110.0.3:5432/bj_app1
 spring.datasource.username=bj_app1
 spring.datasource.password=dxsQBgXEiG
