--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.hikari.schema=public
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.port=8080
+#server.port=8088
 
 # secret mora biti 32 znaka ili vise
 jwt.secret=secretsecretsecretsecretsecretsecret 
@@ -22,3 +23,10 @@ jwt.signatureAlgorithm=SignatureAlgorithm.HS256
 
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=when_authorized
+management.endpoint.health.show-components=when_authorized
+#management.server.port=8888
+
+management.endpoint.shutdown.enabled=true
