--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ management.server.port=8089
 management.endpoint.shutdown.enabled=true
 
 springdoc.api-docs.path=/api-docs
+
+springdoc.swagger-ui.path=/swagger-ui.html
+
+springdoc.swagger-ui.operationsSorter=method
