--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,16 @@ logging.level.org.springframework=ERROR
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-
-spring.datasource.url=jdbc:postgresql://10.110.0.3:5432/bj_app1
-spring.datasource.username=bj_app1
-spring.datasource.password=dxsQBgXEiG
+spring.datasource.url=jdbc:postgresql://localhost:5432/app
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.hikari.schema=public
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-server.port=8088
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8080
 
 # secret mora biti 32 znaka ili vise
 jwt.secret=secretsecretsecretsecretsecretsecret 
@@ -33,4 +35,3 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
 springdoc.swagger-ui.operationsSorter=method
-
