--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,8 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
 springdoc.swagger-ui.operationsSorter=method
+
+logging.file.name=app.log
+logging.file.path=.
+logging.level.root=error
+logging.level.com.java.spring.app=info
