--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,8 @@
             <version>1.5.2</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
         </dependency>
     </dependencies>
 
